--- a/main.html
+++ b/main.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Grid Color Changer</title>
+  <style>
+    #grid-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      grid-gap: 10px;
+      width: 300px;
+      height: 300px;
+    }
+
+    .grid-item {
+      background-color: transparent;
+      text-align: center;
+      font-size: 24px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div id="grid-container">
+    <div id="1" class="grid-item">1</div>
+    <div id="2" class="grid-item">2</div>
+    <div id="3" class="grid-item">3</div>
+    <div id="4" class="grid-item">4</div>
+    <div id="5" class="grid-item">5</div>
+    <div id="6" class="grid-item">6</div>
+    <div id="7" class="grid-item">7</div>
+    <div id="8" class="grid-item">8</div>
+    <div id="9" class="grid-item">9</div>
+  </div>
 
+  <form id="color-form">
+    <label for="block_id">Block ID:</label>
+    <input type="number" id="block_id" min="1" max="9" required>
+    <label for="colour_id">Color:</label>
+    <input type="color" id="colour_id" required>
+    <button type="submit" id="change_button">Change Color</button>
+    <button type="button" id="reset_button">Reset</button>
+  </form>
+
+  <script>
+    const colorForm = document.getElementById('color-form');
+    const blockIdInput = document.getElementById('block_id');
+    const colorInput = document.getElementById('colour_id');
+    const gridItems = document.getElementsByClassName('grid-item');
+    const resetButton = document.getElementById('reset_button');
+
+    colorForm.addEventListener('submit', function(event) {
+      event.preventDefault();
+      const blockId = blockIdInput.value;
+      const color = colorInput.value;
+      const block = document.getElementById(blockId);
+      block.style.backgroundColor = color;
+    });
+
+    resetButton.addEventListener('click', function() {
+      Array.from(gridItems).forEach(item => {
+        item.style.backgroundColor = 'transparent';
+      });
+    });
+  </script>
 </body>
-
 </html>
