--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <title>Grid Color Changer</title>
   <style>
-    #grid-container {
+    .grid-container {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr);
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  <div id="grid-container">
+  <div class="grid-container">
     <div id="1" class="grid-item">1</div>
     <div id="2" class="grid-item">2</div>
     <div id="3" class="grid-item">3</div>
