--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
     <input type="number" id="block_id" min="1" max="9" required>
     <label for="colour_id">Color:</label>
     <input type="color" id="colour_id" required>
-    <button type="submit" id="change_button">Change Color</button>
+    <button type="submit" id="change_button">Change</button>
     <button type="button" id="reset_button">Reset</button>
   </form>
 
