--- a/main.html
+++ b/main.html
@@ -11,6 +11,9 @@
       width: 300px;
       height: 300px;
     }
+	  #change_button{
+		  color: rgb(255, 0, 0);
+	  }
 
     .grid-item {
       background-color: transparent;
